# robocraft-sdk

./: .gitignore  Gemfile  LICENSE  README.md
.github/workflows/: pages.yml
ci/: gen_wrapper_manifest.sh  package_sdk.sh
docs/: _config.yml  index.md  sdk-specification.md  vendor-api-manual-v1.0.md
docs/_includes/: nav-links.html
docs/_layouts/: default.html
docs/assets/css/: site.css
docs/assets/js/: site.js
docs/guides/: unitree-g1-rmw.md  unitree-g1.md
scripts/: build_sdk_wrappers.sh  build_unitree_g1_wrapper.sh  preview_docs.sh
sdk/unitree_ros2/cyclonedds_ws/src/unitree/unitree_api/: CMakeLists.txt
sdk/unitree_ros2/cyclonedds_ws/src/unitree/unitree_hg/: CMakeLists.txt
sdk/unitree_sdk2/example/g1/high_level/: g1_arm5_sdk_dds_example.cpp  g1_arm7_sdk_dds_example.cpp  g1_arm_action_example.cpp  g1_loco_client_example.cpp
sdk/unitree_sdk2/example/h1/: CMakeLists.txt
sdk/unitree_sdk2/example/h1/low_level/: humanoid.hpp
sdk/unitree_sdk2/include/unitree/robot/b2/sport/: sport_client.hpp
sdk/unitree_sdk2/include/unitree/robot/g1/arm/: g1_arm_action_api.hpp  g1_arm_action_client.hpp  g1_arm_action_error.hpp
sdk_wrapper/: export.map
sdk_wrapper/interface/: sdk_wrapper_interface.h
sdk_wrapper/unitree_g1/: CMakeLists.txt  Dockerfile  ci.yaml  config.json  manifest.yaml  unitree_g1_wrapper.cpp  unitree_g1_wrapper.h
sdk_wrapper/unitree_g1_rmw/: CMakeLists.txt  README.md  ci.yaml  config.json  manifest.yaml  unitree_g1_rmw_wrapper.cpp
tools/sdk_diag/: CMakeLists.txt  README.md  elf_inspect.cpp  elf_inspect.h  manifest.cpp  manifest.h  package_check.cpp  package_check.h  sdk_diag.cpp  sha256.cpp  sha256.h  wrapper-manifest-v1.schema.json  yaml_lite.cpp  yaml_lite.h
